--- a/public/index.html
+++ b/public/index.html
@@ -4,6 +4,13 @@
 	<meta charset='utf-8'>
 	<meta name='viewport' content='width=device-width,initial-scale=1'>
 
+	<style>
+	  	body {
+			margin: 0; 
+			padding: 0;
+		}
+	</style>
+
 	<title>Svelte app</title>
 
 	<link rel='icon' type='image/png' href='/favicon.png'>
